[package]
name = "lattice-safe"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["lattice-safe contributors"]
description = "Post-quantum cryptography suite — ML-DSA (FIPS 204) + FN-DSA (FIPS 206) + ML-KEM (FIPS 203)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lattice-safe/lattice-safe-suite"
homepage = "https://github.com/lattice-safe"
documentation = "https://docs.rs/lattice-safe"
keywords = [
    "post-quantum",
    "cryptography",
    "digital-signature",
    "ml-dsa",
    "fn-dsa",
    "ml-kem",
]
categories = ["cryptography", "no-std"]

[features]
default = ["dilithium", "falcon", "kyber"]
dilithium = ["dep:dilithium-rs"]
falcon = ["dep:falcon-rs"]
kyber = ["dep:lattice-kyber"]
serde = ["dilithium-rs?/serde", "falcon-rs?/serde"]
simd = ["dilithium-rs?/simd"]

[dependencies]
dilithium-rs = { version = "0.2", optional = true }
falcon-rs = { version = "0.2", optional = true }
lattice-kyber = { version = "0.1", optional = true }

[package.metadata.docs.rs]
all-features = true
