[package]
name = "lattice-safe-suite"
version = "0.4.2"
edition = "2021"
rust-version = "1.70"
authors = ["lattice-safe contributors"]
description = "Post-quantum cryptography suite — ML-DSA (FIPS 204) + FN-DSA (FIPS 206) + ML-KEM (FIPS 203) + SLH-DSA (FIPS 205)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lattice-safe/lattice-safe-suite"
homepage = "https://github.com/lattice-safe"
documentation = "https://docs.rs/lattice-safe-suite"
keywords = ["post-quantum", "cryptography", "ml-dsa", "fn-dsa", "ml-kem"]
categories = ["cryptography", "no-std"]

[features]
default = ["dilithium", "falcon", "kyber", "slh-dsa"]
dilithium = ["dep:dilithium-rs"]
falcon = ["dep:falcon-rs"]
kyber = ["dep:lattice-kyber"]
slh-dsa = ["dep:lattice-slh-dsa"]
serde = [
    "dilithium-rs?/serde",
    "falcon-rs?/serde",
    "lattice-kyber?/serde",
    "lattice-slh-dsa?/serde",
]
simd = ["dilithium-rs?/simd", "lattice-kyber?/simd"]
getrandom = ["lattice-kyber?/getrandom"]
wasm = ["dep:getrandom-js"]

[dependencies]
dilithium-rs = { version = "0.2", optional = true }
falcon-rs = { version = "0.2", optional = true }
lattice-kyber = { version = "0.1.2", optional = true }
lattice-slh-dsa = { version = "0.3.2", optional = true }
getrandom-js = { version = "0.2", features = [
    "js",
], optional = true, package = "getrandom" }

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pqc_bench"
harness = false

[profile.release]
opt-level = 3
